--- a/build.xml
+++ b/build.xml
@@ -758,7 +758,7 @@
 
     <!-- we run this target before we run SC in order to copy os-specific
              bundles from sc-bundles/osname to its parent sc-bundles-->
-    <target name="-deploy-os-specific-bundles" if="bundles.dest">
+    <target name="-deploy-os-specific-bundles" if="bundles.dest.os">
 
         <copy todir="${bundles.dest}">
             <fileset dir="${bundles.dest.os}">
