add dnsjava to utils since that's what we're now using insteand of jndi. Fix by Vincent Lucas, Louis Pasteur University
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2406 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -936,6 +936,7 @@
             manifest="src/net/java/sip/communicator/util/util.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/util"
                 prefix="net/java/sip/communicator/util"/>
+            <zipfileset src="${lib.noinst}/dnsjava-2.0.3.jar" prefix=""/>
         </jar>
     </target>
 
