--- a/resources/install/logging.properties
+++ b/resources/install/logging.properties
@@ -77,4 +77,4 @@ net.java.sip.communicator.impl.gui.level = INFO
 com.xyz.foo.level = SEVERE
 sun.awt.level = INFO
 java.awt.level = INFO
-
+javax.swing.level = INFO
