--- a/build.xml
+++ b/build.xml
@@ -843,7 +843,7 @@
         bundle-plugin-yahooaccregwizz,bundle-plugin-aimaccregwizz,
         bundle-version,bundle-version-impl,bundle-shutdown,
         bundle-growlnotification,bundle-audionotifier,bundle-plugin-splashscreen,
-        bundle-plugin-systray,bundle-browserlauncher,bundle-gibberish,
+        bundle-systray,bundle-browserlauncher,bundle-gibberish,
         bundle-gibberish-slick,bundle-plugin-gibberishaccregwizz"/>
 
     <!--BUNDLE-HISTORY-->
@@ -1498,17 +1498,19 @@ javax.swing.event, javax.swing.border"/>
             </jar>
         </target>
 
-    <!--BUNDLE-MEDIA-->
-    <target name="bundle-plugin-systray">
+	<!--BUNDLE-SYSTRAY-->
+    <target name="bundle-systray">
         <!-- Creates a bundle for the Systray plugin."-->
         <jar
             compress="false" destfile="${bundles.dest}/systray.jar"
-            manifest="src/net/java/sip/communicator/plugin/systray/systray.manifest.mf">
-            <zipfileset dir="${dest}/net/java/sip/communicator/plugin/systray"
-                prefix="net/java/sip/communicator/plugin/systray"/>
+            manifest="src/net/java/sip/communicator/impl/systray/systray.manifest.mf">
+            <zipfileset dir="${dest}/net/java/sip/communicator/service/systray"
+                prefix="net/java/sip/communicator/service/systray"/>
+            <zipfileset dir="${dest}/net/java/sip/communicator/impl/systray"
+                prefix="net/java/sip/communicator/impl/systray"/>
         </jar>
     </target>
-
+	
     <!-- BUNDLE-BROWSER LAUNCHER -->
     <target name="bundle-browserlauncher">
         <!-- Creates a bundle for the browser launcher. .-->
