Added AIM icons
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2475 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1151,6 +1151,8 @@ javax.swing.event, javax.swing.border"/>
             <zipfileset src="${lib.noinst}/jsocks-klea.jar" prefix=""/>
             <zipfileset dir="resources/images/icq"
                             prefix="resources/images/icq"/>
+            <zipfileset dir="resources/images/aim"
+                            prefix="resources/images/aim"/>
         </jar>
     </target>
 
