Fix some problems with installers - linux os-specific content, generic installer run.sh script. Added correct version and date in installers.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2488 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -158,6 +158,10 @@
     <!-- end jmf.home-->
 
     <property name="jdic_stub.jar" value="${os.lib.home}/jdic_stub.jar"/>
+    
+    <tstamp>
+        <format property="build.date" pattern="dd-MM-yyyy"/>
+    </tstamp>
 
     <path id="project.source.path">
         <!-- refer to both main and test source files. -->
