Import serialize and not serializer (Report by Chris Vincenot)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2569 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -20,7 +20,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  org.w3c.dom; \
  org.xml.sax; \
  javax.xml.parsers;\
- org.apache.xml.serializer; \
+ org.apache.xml.serialize; \
  javax.xml.transform; \
  javax.xml.transform.dom; \
  javax.xml.transform.stream; \
