Change systema package name (report by Chris Vincenot)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2570 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -12,7 +12,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  sun.misc; \
  sun.security.action; \
  javax.xml.parsers;\
- org.apache.xml.serializer;\
+ org.apache.xml.serialize;\
  javax.xml.transform;\
  javax.xml.transform.dom;\
  javax.xml.transform.stream;\
