1. smack library bundle to be used from bundles needing smack library 2. Fix overriding character encoding for icq messages in installers. Discussed with Pavel.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2587 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -62,6 +62,7 @@ felix.auto.start.50= \
  reference:file:sc-bundles/media.jar \
  reference:file:sc-bundles/protocol-icq.jar \
  reference:file:sc-bundles/protocol-sip.jar \
+ reference:file:sc-bundles/smacklib.jar \
  reference:file:sc-bundles/protocol-jabber.jar \
  reference:file:sc-bundles/protocol-msn.jar \
  reference:file:sc-bundles/protocol-yahoo.jar \
