--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -56,6 +56,7 @@ felix.auto.start.4= \
  file:sc-bundles/fileaccess.jar \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
+ file:sc-bundles/smacklib.jar \
  file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/protocol-msn.jar \
  file:sc-bundles/protocol-sip.jar \
