--- a/build.xml
+++ b/build.xml
@@ -743,7 +743,7 @@
             <!-- Tell felix to run sip-communicator-->
             <sysproperty key="felix.config.properties"
                 value="file:./lib/felix.client.run.properties"/>
-
+                
             <!-- Tell java.util.logging about our logging preferences -->
             <sysproperty key="java.util.logging.config.file"
                 value="lib/logging.properties"/>
@@ -841,7 +841,7 @@
         bundle-netaddr,bundle-netaddr-slick,bundle-slickless,
         bundle-slick-runner,bundle-sip,bundle-sip-slick,bundle-fileaccess,
         bundle-fileaccess-slick,bundle-media,bundle-media-slick,
-        bundle-protocol,bundle-icq,bundle-icq-slick,bundle-mock,
+        bundle-protocol,bundle-icq,bundle-icq-slick,bundle-mock,bundle-smacklib,
         bundle-jabber,bundle-jabber-slick,bundle-swing-ui,
         bundle-msn,bundle-msn-slick,bundle-yahoo,bundle-yahoo-slick,
         bundle-contactlist,meta-contactlist,meta-contactlist-slick,
@@ -1144,6 +1144,18 @@ javax.swing.event, javax.swing.border"/>
                 prefix="resources/images"/>
         </jar>
     </target>
+    
+    <target name="bundle-smacklib">
+        <!-- Creates a bundle containing the smack lib.-->
+        <jar compress="false" destfile="${bundles.dest}/smacklib.jar"
+            manifest="${lib.noinst}/smack.manifest.mf">
+            <zipfileset src="${lib.noinst}/smack.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/smackx.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/smackx-jingle.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/retroweaver-rt-2.0.jar" prefix=""/>
+            <zipfileset src="${lib.noinst}/backport-util-concurrent.jar" prefix=""/>
+        </jar>
+    </target>
 
     <!-- BUNDLE-ICQ -->
     <target name="bundle-icq">
@@ -1196,11 +1208,6 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/impl/protocol/jabber/jabber.provider.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/protocol/jabber"
                 prefix="net/java/sip/communicator/impl/protocol/jabber"/>
-            <zipfileset src="${lib.noinst}/smack.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/smackx.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/smackx-jingle.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/retroweaver-rt-2.0.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/backport-util-concurrent.jar" prefix=""/>
             <zipfileset dir="resources/images/jabber"
                             prefix="resources/images/jabber"/>
         </jar>
@@ -1214,11 +1221,6 @@ javax.swing.event, javax.swing.border"/>
             manifest="test/net/java/sip/communicator/slick/protocol/jabber/jabber.provider.slick.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/slick/protocol/jabber"
                 prefix="net/java/sip/communicator/slick/protocol/jabber"/>
-            <zipfileset src="${lib.noinst}/smack.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/smackx.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/smackx-jingle.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/retroweaver-rt-2.0.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/backport-util-concurrent.jar" prefix=""/>
         </jar>
     </target>
 
@@ -1370,11 +1372,6 @@ javax.swing.event, javax.swing.border"/>
             manifest="src/net/java/sip/communicator/plugin/jabberaccregwizz/jabberaccregwizz.manifest.mf">
             <zipfileset dir="${dest}/net/java/sip/communicator/plugin/jabberaccregwizz"
                 prefix="net/java/sip/communicator/plugin/jabberaccregwizz"/>
-			<zipfileset src="${lib.noinst}/smack.jar" prefix=""/>
-			<zipfileset src="${lib.noinst}/smackx.jar" prefix=""/>
-			<zipfileset src="${lib.noinst}/smackx-jingle.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/retroweaver-rt-2.0.jar" prefix=""/>
-            <zipfileset src="${lib.noinst}/backport-util-concurrent.jar" prefix=""/>
             <zipfileset dir="resources/images/jabber"
                             prefix="resources/images/jabber"/>
         </jar>
