--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -34,7 +34,10 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.sound.sampled; \
  org.jdesktop.jdic.tray; \
  org.jdesktop.jdic.desktop; \
- com.apple.eio;
+ com.apple.eio; \
+ org.xml.sax.helpers; \
+ org.jdom; \
+ org.jdom.input;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
 #reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
@@ -68,7 +71,8 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-yahoo.jar \
  reference:file:sc-bundles/protocol-gibberish.jar \
  reference:file:sc-bundles/netaddr.jar \
- reference:file:sc-bundles/meta-cl.jar
+ reference:file:sc-bundles/meta-cl.jar \
+ reference:file:sc-bundles/protocol-rss.jar
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
@@ -90,7 +94,8 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/yahooaccregwizz.jar \
  reference:file:sc-bundles/gibberishaccregwizz.jar \
- reference:file:sc-bundles/shutdown.jar
+ reference:file:sc-bundles/shutdown.jar \
+ reference:file:sc-bundles/rssaccregwizz.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
