<No Comment Entered>
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2612 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -64,6 +64,7 @@ net.sf.cindy.impl.level = INFO
 
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.impl.level = INFO
+net.java.sip.communicator.impl.protocol.level = FINEST
 net.java.sip.communicator.impl.shutdown.level = FINEST
 net.java.sip.communicator.impl.contactlist.level = FINEST
 net.java.sip.communicator.slick.level = FINEST
