Fix failing jabber - missing package for smacklib bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2616 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -9,6 +9,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.table; \
  org.w3c.dom; \
  org.xml.sax; \
+ org.xml.sax.helpers; \
  sun.misc; \
  sun.security.action; \
  javax.xml.parsers;\
