--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -71,8 +71,8 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-yahoo.jar \
  reference:file:sc-bundles/protocol-gibberish.jar \
  reference:file:sc-bundles/netaddr.jar \
- reference:file:sc-bundles/meta-cl.jar \
- reference:file:sc-bundles/protocol-rss.jar
+ reference:file:sc-bundles/protocol-rss.jar \
+ reference:file:sc-bundles/meta-cl.jar
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
@@ -94,8 +94,9 @@ felix.auto.start.60= \
  reference:file:sc-bundles/msnaccregwizz.jar \
  reference:file:sc-bundles/yahooaccregwizz.jar \
  reference:file:sc-bundles/gibberishaccregwizz.jar \
- reference:file:sc-bundles/shutdown.jar \
- reference:file:sc-bundles/rssaccregwizz.jar
+ reference:file:sc-bundles/extendedcallhistorysearch.jar \
+ reference:file:sc-bundles/rssaccregwizz.jar \
+ reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
 # bundle.
