--- a/src/net/java/sip/communicator/plugin/rssaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/rssaccregwizz/resources.properties
@@ -1,4 +1,4 @@
-protocolName=Rss
+protocolName=RSS
 protocolDescription=Add your preferred RSS feeds into SIP Communicator !
 userID=User ID:
 password=Password:
