fix a commit by mistake
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2627 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -751,8 +751,8 @@
             <sysproperty key="java.net.preferIPv6Addresses"
                 value="false"/>
 
-        	<sysproperty key="net.java.sip.communicator.SC_HOME_DIR_LOCATION"
-        	        	                value="${user.home}/schome"/>
+        	<!--sysproperty key="net.java.sip.communicator.SC_HOME_DIR_LOCATION"
+        	        	                value="${user.home}"/-->
         	
             <!-- Setting properties necessary for dependencies on native libs.-->
             <sysproperty key="java.library.path" path="${ld.library.path}:${path}:${dyld.library.path}"/>
