--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -7,6 +7,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing; \
  javax.swing.event; \
  javax.swing.table; \
+ javax.swing.text; \
  org.w3c.dom; \
  org.xml.sax; \
  org.xml.sax.helpers; \
