Fix running rss. (NoClassDef Found Error is fixed).
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2642 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -35,9 +35,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  org.jdesktop.jdic.tray; \
  org.jdesktop.jdic.desktop; \
  com.apple.eio; \
- org.xml.sax.helpers; \
- org.jdom; \
- org.jdom.input;
+ org.xml.sax.helpers;
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
 #reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
