--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry path="src" kind="src"/>
-	<classpathentry path="test" kind="src"/>
-	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
-	<classpathentry path="lib/felix.jar" kind="lib"/>
-	<classpathentry path="lib/jdic-all.jar" kind="lib"/>
-	<classpathentry path="lib/kxml-min.jar" kind="lib"/>
-	<classpathentry path="lib/servicebinder.jar" kind="lib"/>
-	<classpathentry path="sip-communicator.bin/bundle1/version0.0/embedded/kxml2-2.2.2.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/backport-util-concurrent.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/bcprov-jdk14-130.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/commons-logging.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/concurrent.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/dnsjava-2.0.3.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/JainSipApi1.2.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/JainSipRi1.2.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/jmf.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/jml-1.0b1.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/joscar-client.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/joscar-common.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/joscar-protocol.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/jsocks-klea.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/jspeex.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/junit.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/log4j-1.2.8.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/nist-sdp-1.0.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/retroweaver-rt-2.0.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/smack.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/smackx.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/smackx-jingle.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/Stun4J.jar" kind="lib"/>
-	<classpathentry path="lib/installer-exclude/ymsg_network_v0_61.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/mac/installer-exclude/jmf.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/mac/AppleJavaExtensions.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/mac/growl.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/mac/jdic_stub.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/solaris/installer-exclude/jmf.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/solaris/jdic_stub.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/windows/installer-exclude/jmf.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/windows/jdic_stub.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/windows/installer-exclude/sound.jar" kind="lib"/>
-	<classpathentry path="lib/bundle/junit.jar" kind="lib"/>
-	<classpathentry path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/linux/installer-exclude/jmf.jar" kind="lib"/>
-	<classpathentry path="lib/os-specific/linux/jdic_stub.jar" kind="lib"/>
-	<classpathentry path="bin" kind="output"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/felix.jar"/>
+	<classpathentry kind="lib" path="lib/jdic-all.jar"/>
+	<classpathentry kind="lib" path="lib/kxml-min.jar"/>
+	<classpathentry kind="lib" path="lib/servicebinder.jar"/>
+	<classpathentry kind="lib" path="lib/bundle/junit.jar"/>
+	<classpathentry kind="lib" path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/backport-util-concurrent.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/bcprov-jdk14-130.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/concurrent.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/dnsjava-2.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/JainSipApi1.2.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/JainSipRi1.2.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jcalendar-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jdom.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jml-1.0b1.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/joscar-client.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/joscar-common.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/joscar-protocol.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jsocks-klea.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/jspeex.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/junit.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/nist-sdp-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/pircbot.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/retroweaver-rt-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/rome-0.9.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/smack.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/smackx.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/smackx-jingle.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/Stun4J.jar"/>
+	<classpathentry kind="lib" path="lib/installer-exclude/ymsg_network_v0_61.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/linux/installer-exclude/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/linux/jdic_stub.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/mac/installer-exclude/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/mac/AppleJavaExtensions.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/mac/growl.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/mac/jdic_stub.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/solaris/installer-exclude/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/solaris/jdic_stub.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/jmf.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/sound.jar"/>
+	<classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
