switch the default level to info. FINEST was making too much of the background libs spit fire.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2654 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -27,7 +27,7 @@ handlers= java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overriden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level= FINEST
+.level= INFO
 
 ############################################################
 # Handler specific properties.
