As JarBundler (used for MacOSX package) does not like absolute paths, replaced variable with static path in the macosx jarbundler section.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2661 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -446,11 +446,11 @@
                       value="logging.properties"/>
 
         <jarfileset dir=".">
-            <include name="${lib}/*.jar" />
-            <include name="${lib.mac}/*.jar" />
-            <include name="${lib}/bundle/*.jar" />
-            <exclude name="${lib}/bundle/junit.jar" />
-            <include name="${native.libs}/mac/*.jnilib" />
+            <include name="lib/*.jar" />
+            <include name="lib/os-specific/mac/*.jar" />
+            <include name="lib/bundle/*.jar" />
+            <exclude name="lib/bundle/junit.jar" />
+            <include name="lib/native/mac/*.jnilib" />
             <include name="${bundles.dest}/*.jar" />
             <exclude name="${bundles.dest}/*-slick.jar" />
         </jarfileset>
